:lipstick: fixed background color on smaller screen sizes

--- a/Huddle/styles.css
+++ b/Huddle/styles.css
@@ -169,7 +169,7 @@ a:link {
 
 	body {
 		line-height: 1.4;
-		background: url(./images/bg-mobile.svg) no-repeat blueviolet;
+		background: url(./images/bg-mobile.svg) no-repeat hsl(257, 40%, 49%); 
 	}
 
 	.header__logo {
